# parallel-rest

./: Cargo.toml  README.md
src/: main.rs  reqwest_utils.rs
