[package]
authors = ["Ian McLeod"]
description = "Async REST Sandpit"
edition = "2021"
name = "async-rest"
version = "0.1.0"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thread-id = "4.0.0"